force-app/main/default/objects/Anon_Pattern__mdt/Anon_Pattern__mdt.object-meta.xml
<CustomObject>
    <label>Anonymization Pattern</label>
    <pluralLabel>Anonymization Patterns</pluralLabel>
</CustomObject>