force-app/main/default/objects/Anon_Pattern__mdt/fields/Base_Email__c.field-meta.xml
<CustomField>
    <fullName>Base_Email__c</fullName>
    <label>Base Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>