force-app/main/default/objects/Anon_Pattern__mdt/fields/Pattern_Type__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Type__c</fullName>
    <label>Pattern Type (unique key)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>